Add talks to the front page

--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,3 +1,11 @@
+<h1>Talks</h1>
+<ul id="post-list">
+  <li>
+    <a href="https://vimeo.com/95680892">Lispy Elixir <h2>A look at the homiconicity and macro system in Elixir</h2></a>
+    <a href="https://vimeo.com/61536867">An Introduction To Erlang <h2>A gentle introduction to erlang</h2></a>
+</ul>
+
+<h1>Posts</h1>
 <ul id="post-list">
     {% for post in paginator.posts %}
         <li>
