--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,8 @@ em, i { font-style: italic; }
 	letter-spacing: -1px;
 	color: #222;
 	font-weight: bold;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .home h2 {
@@ -371,7 +373,7 @@ img {
 Post List
 =========================================== */
 #post-list,#archive-list {
-	margin-top: 100px;
+	margin-top: 5px;
 }
 
 #post-list li,#archive-list li {
