Datomic performance post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer id="footer">
-    <p class="small">© Copyright {{ site.time | date: '%Y' }} Patrick Gombert</p>
+  <a class="small" href="https://www.github.com/patrickgombert">github</a>
+  <a class="small" href="https://www.twitter.com/patrickgombert">twitter</a>
+  <p class="small">pg@patrickgombert.com</a>
 </footer>
