Add log structured merge trees post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
   <a class="small" href="https://www.github.com/patrickgombert">github</a>
-  <a class="small" href="https://www.linkedin.com/in/patrickgombert/">linkedin</a>
-  <p class="small">pg@patrickgombert.com</a>
+  <a class="small" href="https://www.linkedin.com/in/patrickgombert">linkedin</a>
+  <p class="small">pg@patrickgombert.com</p>
 </footer>
